--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
       {{ content }}
 
       <footer class="site-footer">
+        <a href="https://jpsheils.github.io/">Return to home</a>
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
