--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,6 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description }}</h2>
-      <a href="https://jpsheils.github.io/">Return Home</a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
@@ -34,6 +33,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+      <a href="https://jpsheils.github.io/"><small>&#8592; Return Home</small></a>
       {{ content }}
 
       <footer class="site-footer">
